[gd_scene load_steps=6 format=3 uid="uid://btjh78darwmh4"]

[ext_resource type="Texture2D" uid="uid://cvehh1no6p4rt" path="res://World/WorldTileMpa.png" id="1_25wy8"]
[ext_resource type="Script" path="res://World/World.gd" id="1_vshny"]
[ext_resource type="Script" path="res://World/WorldSceneHandler.gd" id="2_ti2vb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fkyk2"]
texture = ExtResource("1_25wy8")
0:0/0 = 0
1:0/0 = 0
1:0/0/custom_data_0 = 1.0

[sub_resource type="TileSet" id="TileSet_pd5ki"]
custom_data_layer_0/name = "speed_modifier"
custom_data_layer_0/type = 3
sources/0 = SubResource("TileSetAtlasSource_fkyk2")

[node name="World" type="Node"]
script = ExtResource("1_vshny")

[node name="SceneHandler" type="Node" parent="."]
script = ExtResource("2_ti2vb")

[node name="WorldUpdate" type="Timer" parent="."]

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource("TileSet_pd5ki")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 65536, 0, 12, 65536, 0, 13, 65536, 0, 14, 65536, 0, 15, 65536, 0, 16, 65536, 0, 17, 65536, 0, 18, 65536, 0, 19, 65536, 0, 65555, 65536, 0, 131091, 65536, 0, 196627, 0, 0, 262163, 0, 0, 327699, 65536, 0, 327700, 65536, 0, 393236, 65536, 0, 458772, 65536, 0, 524308, 65536, 0, 589844, 65536, 0, 655380, 65536, 0, 720916, 65536, 0, 20, 65536, 0, 65556, 65536, 0, 131092, 65536, 0, 196628, 65536, 0, 262164, 65536, 0, 720896, 65536, 0, 720897, 65536, 0, 720898, 65536, 0, 720899, 65536, 0, 720900, 65536, 0, 720901, 65536, 0, 720902, 65536, 0, 720903, 65536, 0, 720904, 65536, 0, 720905, 65536, 0, 720906, 65536, 0, 720907, 65536, 0, 720908, 65536, 0, 720909, 65536, 0, 720910, 65536, 0, 720911, 65536, 0, 720912, 65536, 0, 720913, 65536, 0, 720914, 65536, 0, 720915, 65536, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 458752, 65536, 0, 524288, 65536, 0, 589824, 65536, 0, 655360, 65536, 0, 458762, 65536, 0, 393226, 65536, 0, 327690, 65536, 0, 262154, 65536, 0, 196618, 65536, 0, 131082, 65536, 0, 65546, 65536, 0, 65545, 65536, 0, 65544, 65536, 0, 65543, 65536, 0, 65542, 65536, 0, 65541, 65536, 0, 65540, 65536, 0, 65539, 65536, 0, 65538, 65536, 0, 65537, 65536, 0, 131073, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, 327681, 65536, 0, 393217, 65536, 0, 458753, 65536, 0, 524289, 65536, 0, 589825, 65536, 0, 655361, 65536, 0, 655362, 65536, 0, 589826, 65536, 0, 524290, 65536, 0, 458754, 0, 0, 393218, 0, 0, 327682, 65536, 0, 262146, 65536, 0, 196610, 65536, 0, 131074, 65536, 0, 131075, 65536, 0, 196611, 65536, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 65536, 0, 524291, 65536, 0, 589827, 65536, 0, 655363, 65536, 0, 655364, 65536, 0, 589828, 65536, 0, 524292, 65536, 0, 458756, 65536, 0, 393220, 65536, 0, 327684, 65536, 0, 262148, 0, 0, 196612, 0, 0, 131076, 65536, 0, 131077, 0, 0, 196613, 0, 0, 262149, 65536, 0, 327685, 65536, 0, 393221, 65536, 0, 458757, 65536, 0, 524293, 65536, 0, 589829, 65536, 0, 655365, 65536, 0, 655366, 65536, 0, 589830, 65536, 0, 524294, 65536, 0, 458758, 65536, 0, 393222, 65536, 0, 327686, 65536, 0, 262150, 65536, 0, 196614, 65536, 0, 131078, 0, 0, 131079, 0, 0, 196615, 65536, 0, 262151, 65536, 0, 327687, 65536, 0, 393223, 65536, 0, 458759, 65536, 0, 524295, 65536, 0, 589831, 65536, 0, 655367, 65536, 0, 655368, 65536, 0, 589832, 65536, 0, 524296, 65536, 0, 458760, 0, 0, 393224, 0, 0, 327688, 0, 0, 262152, 0, 0, 196616, 0, 0, 131080, 0, 0, 131081, 65536, 0, 196617, 65536, 0, 262153, 65536, 0, 327689, 65536, 0, 393225, 65536, 0, 458761, 0, 0, 524297, 65536, 0, 589833, 65536, 0, 655369, 65536, 0, 655370, 65536, 0, 589834, 65536, 0, 524298, 0, 0, 524299, 0, 0, 458763, 65536, 0, 393227, 65536, 0, 327691, 65536, 0, 262155, 65536, 0, 196619, 65536, 0, 131083, 65536, 0, 65547, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 262156, 65536, 0, 327692, 65536, 0, 393228, 65536, 0, 458764, 65536, 0, 524300, 0, 0, 589836, 65536, 0, 589835, 65536, 0, 655371, 65536, 0, 655372, 65536, 0, 655373, 65536, 0, 589837, 65536, 0, 524301, 65536, 0, 458765, 0, 0, 393229, 65536, 0, 327693, 65536, 0, 262157, 65536, 0, 196621, 65536, 0, 131085, 65536, 0, 65549, 65536, 0, 65550, 65536, 0, 131086, 65536, 0, 196622, 65536, 0, 262158, 65536, 0, 327694, 65536, 0, 393230, 0, 0, 458766, 0, 0, 524302, 65536, 0, 589838, 65536, 0, 655374, 65536, 0, 655375, 65536, 0, 589839, 65536, 0, 524303, 65536, 0, 458767, 65536, 0, 393231, 0, 0, 327695, 0, 0, 262159, 65536, 0, 196623, 65536, 0, 131087, 65536, 0, 65551, 65536, 0, 65552, 65536, 0, 131088, 65536, 0, 196624, 0, 0, 262160, 0, 0, 327696, 65536, 0, 393232, 65536, 0, 458768, 65536, 0, 524304, 65536, 0, 589840, 65536, 0, 655376, 65536, 0, 655377, 65536, 0, 589841, 65536, 0, 524305, 65536, 0, 458769, 65536, 0, 393233, 65536, 0, 327697, 65536, 0, 262161, 65536, 0, 196625, 0, 0, 131089, 65536, 0, 65553, 65536, 0, 65554, 65536, 0, 131090, 65536, 0, 196626, 0, 0, 262162, 65536, 0, 327698, 65536, 0, 393234, 65536, 0, 458770, 65536, 0, 524306, 65536, 0, 589842, 65536, 0, 655378, 65536, 0, 655379, 65536, 0, 589843, 65536, 0, 524307, 65536, 0, 458771, 65536, 0, 393235, 65536, 0)

[connection signal="world_ready" from="." to="SceneHandler" method="_on_world_ready"]
[connection signal="timeout" from="WorldUpdate" to="." method="_on_world_update_timeout"]
